--- a/css/global.css
+++ b/css/global.css
@@ -23,8 +23,8 @@
 .card { @apply bg-white shadow-sm p-1 m-1; }
 
 /* Modal specific styles */
-.modal-container { @apply fixed inset-0 z-50 w-screen overflow-y-auto bg-gray-900/75 transition-opacity; }
-.modal-panel { @apply relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg; }
+.modal-container { @apply fixed inset-0 z-999 w-screen h-screen flex items-center justify-center bg-gray-900/50 transition-opacity; }
+.modal-panel { @apply rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg; }
 
 .compact-th {@apply px-0 py-0 mx-0}
 .compact-td {@apply border border-slate-400 p-0 truncate}
